soroban-sdk/tests/macros_fails/contractfile_with_sha256_verify_fail.stderr
error: sha256 does not match, expected: 58f98f171987ffff001c4c7f15357bb2c2a4870ec9294c28a401d6c0143ed0e5
 --> tests/macros_fails/contractfile_with_sha256_verify_fail.rs:3:5
  |
3 |     sha256 = "0000000000000000000000000000000000000000000000000000000000000000",
  |     ^^^^^^

error[E0601]: `main` function not found in crate `$CRATE`
 --> tests/macros_fails/contractfile_with_sha256_verify_fail.rs:4:3
  |
4 | );
  |   ^ consider adding a `main` function to `$DIR/tests/macros_fails/contractfile_with_sha256_verify_fail.rs`
